Fixed Alignment of Cards

--- a/client/src/components/LandingPage/LandingPage.css
+++ b/client/src/components/LandingPage/LandingPage.css
@@ -57,22 +57,6 @@
   text-decoration: none;
   color: black;
 }
-.cJeRRR {
-  box-sizing: border-box;
-  padding: 0;
-  -webkit-transition: all 250ms ease;
-  transition: all 250ms ease;
-  border: none;
-  margin: 5px;
-  background-color: #f26522!important;
-  font-size: 1.3em;
-  content: "";
-  height: 10px;
-  width: 10px;
-  box-shadow: 0 0 1px 3px #f26522!important;
-  border-radius: 50%;
-  outline: none;
-}
 @media (max-width: 700px) {
   .twoCols {
     grid-template-columns: 1fr;
@@ -84,4 +68,20 @@
 {
   display: block;
 }
+}
+.cJeRRR {
+  box-sizing: border-box;
+  padding: 0;
+  -webkit-transition: all 250ms ease;
+  transition: all 250ms ease;
+  border: none;
+  margin: 5px;
+  background-color: #f26522;
+  font-size: 1.3em;
+  content: "";
+  height: 10px;
+  width: 10px;
+  box-shadow: 0 0 1px 3px #f26522;
+  border-radius: 50%;
+  outline: none;
 }
